infra/terraform/modules/alb/main.tf
terraform {
  required_providers { aws = { source="hashicorp/aws", version="~> 5.0" } }
}
resource "aws_security_group" "alb" {
  name = "${var.project_name}-${var.env}-alb-sg"
  vpc_id = var.vpc_id
  ingress { from_port=80 to_port=80 protocol="tcp" cidr_blocks=["0.0.0.0/0"] }
  egress  { from_port=0 to_port=0 protocol="-1" cidr_blocks=["0.0.0.0/0"] }
  tags = merge(var.tags,{Name="${var.project_name}-${var.env}-alb-sg"})
}
resource "aws_lb" "this" {
  name = "${var.project_name}-${var.env}-alb"
  load_balancer_type="application"
  security_groups=[aws_security_group.alb.id]
  subnets=var.public_subnet_ids
  tags=merge(var.tags,{Name="${var.project_name}-${var.env}-alb"})
}
resource "aws_lb_target_group" "front" {
  name="${var.project_name}-${var.env}-tg-front"
  port=80 protocol="HTTP" vpc_id=var.vpc_id
  health_check { path="/" matcher="200-399" interval=15 timeout=5 healthy_threshold=2 unhealthy_threshold=3 }
}
resource "aws_lb_target_group" "back" {
  name="${var.project_name}-${var.env}-tg-back"
  port=80 protocol="HTTP" vpc_id=var.vpc_id
  health_check { path="/health" matcher="200" interval=15 timeout=5 healthy_threshold=2 unhealthy_threshold=3 }
}
resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.this.arn
  port=80 protocol="HTTP"
  default_action { type="forward" target_group_arn=aws_lb_target_group.front.arn }
}
resource "aws_lb_listener_rule" "api" {
  listener_arn = aws_lb_listener.http.arn
  priority=10
  action { type="forward" target_group_arn=aws_lb_target_group.back.arn }
  condition { path_pattern { values=["/api/*","/health"] } }
}
output "alb_dns_name" { value = aws_lb.this.dns_name }
output "alb_sg_id" { value = aws_security_group.alb.id }
output "tg_front_arn" { value = aws_lb_target_group.front.arn }
output "tg_back_arn" { value = aws_lb_target_group.back.arn }
